@@ -352,6 +352,10 @@
       \item New function \code{regmatches()} for extracting matched or
       non-matched substrings from match data obtained by \code{regexpr()}
       and \code{gregexpr()}.
+      
+      \item \code{help(package = "pkg_name", help_type = "HTML")} now
+      gives HTML help on the package rather than text help.  (This gives
+      direct access to the HTML version of the package manual.)
     }
   }
 
